Revision history for Perl extension App::Wax.

2.4.0 - TBD

    - allow option bundling, e.g. `-c -D` can be written as `-cD`
    - add --default-directory as an alias for -D
    - allow the user agent to be defined via $WAX_USER_AGENT

2.3.3 - 2020-05-04

    - version bump to fix deletion of previous version from PAUSE
    - update dependencies

2.3.2 - 2020-04-30

    - documentation tweaks/fixes

2.3.1 - 2019-06-23

    - sanity-check corrupt (empty) index files

2.3.0 - 2018-09-27

    - improve tarball detection

2.2.1 - 2018-06-01

    - make the version declaration(s) compatible with perl 5.8

2.2.0 - 2018-04-27

    - the version of the command (wax) is now separate from that
      of its library (App::Wax). this means breaking changes in the
      latter no longer trigger major SemVer bumps in the former
    - log messages now display the index of the URL they apply to

2.1.0 - 2018-03-15

    - update metadata to reflect updated dependencies in the build file
    - minor documentation tweaks/fixes

2.0.0 - 2018-03-15

    - breaking changes:
        - `resolve_temp` now returns a ($filename, $error) pair rather than
          just the filename
        - `render` has been renamed `dump_command`
        - `lwp_user_agent` has been removed
        - `keep` is now read-only
        - some error (exit) codes have changed
    - improve extension inference: common double-barrel extensions such as
      tar.gz and tar.bz2 are now detected
    - fix -u/--user-agent option
    - misc documentation tweaks/fixes

1.1.1 - 2017-06-06

   - perl 5.26 compatibility fix: add '.' to @INC to load inc::Module::Install

1.1.0 - 2016-12-16

    - add -D option equivalent to -d "${XDG_CACHE_HOME:-$HOME/.cache}/wax"
    - automatically create the -d/-D directories if their parent directories exist
      (otherwise raise an error)

1.0.5 - 2015-02-16

    - fix logging of unresolved URLs

1.0.4 - 2015-02-12

    - make sure temp files are removed on error